links and howtocode

--- a/blogs/howto/howto.html
+++ b/blogs/howto/howto.html
@@ -28,8 +28,22 @@
       <h2>How To</h2>
       <p>Explore a variety of how-to guides, tips, and tutorials for every interest. (Content coming soon!)
 
-<a href="/tools/software/how-to-use-git.html">how-to-use-git</a>
-<a href="/tools/software/how-to-use-abc.html">how-to-use-abc</a>
+<h1>Coding </br>
+<a href="/blogs/howto/software/how-to-use-git.html" style="color:blue;">How to get and Configure SSH Keys for using GIT</a></br>
+
+<a href="/blogs/howto/software/how-to-use-git2.html" style="color:blue;">How to use GIT on Windows</a></br>
+<a href="/blogs/howto/software/how-to-ssh-setup-bitbucket.html" style="color:blue;">How to add SSH keys to Bitbucket</a></br>
+
+<a href="/blogs/howto/software/how-to-setup-java-maven.html" style="color:blue;">How to Setup JAVA and MAVEN On Windows</a></br>
+<a href="/blogs/howto/software/how-to-git-clone-existing-project.html" style="color:blue;">How to Setup GIT Repo on system and other GIT operations</a></br>
+<a href="/blogs/howto/software/how-to-cucumber-cheatsheet.html" style="color:blue;">How to use Cucumber - CheatSheet</a></br>
+<a href="/blogs/howto/software/how-to-qa-interview-questions-1.html" style="color:blue;">How to Crack QA Interview - Questions-1</a></br>
+<a href="/blogs/howto/software/how-to-java-principles.html" style="color:blue;">How to JAVA Principles</a></br>
+<a href="/blogs/howto/software/how-to-selenium-cheatsheet.html" style="color:blue;">How to use Selenium - CheatSheet</a></br>
+<a href="/blogs/howto/software/how-to-typescript.html" style="color:blue;">How to Typescript - CheatSheet</a></br>
+
+
+<h1>
 </p>
     </section>
   </main>
