--- a/games/2048.html
+++ b/games/2048.html
@@ -111,8 +111,8 @@
 </head>
 <body>
   <div class="side-buttons">
-    <a href="/ultimatrix/index.html">⬅ Back to Ultimatrix</a>
-    <a href="/more-games">Explore Other Games ➡</a>
+    <a href="/../index.html">⬅ Back to Ultimatrix</a>
+    <a href="/games/games.html">Explore Other Games ➡</a>
   </div>
   <div class="game-container" tabindex="0" onkeydown="handleKey(event)">
     <div class="title">2048</div>
