--- a/games/games.html
+++ b/games/games.html
@@ -48,9 +48,51 @@
           <p class="games-section-desc">Blink and you’ll miss him! Waldo’s a masterclass in vanishing acts.</p>
         </div>
         <div id="tictactoe">
-          <img class="games-section-img" src="\assets\img\tictactoe.jpeg" alt="">
+          <img class="games-section-img" src="" alt="">
           <a href="/games/xo.html" class="games-section-heading">Tic-Tac-Toe</a>
           <p class="games-section-desc">Three in a row, one mind to outsmart! Tic Tac Toe’s a battle of wits.<br>Challenge yourself or a friend.</p>
+        </div>
+        
+        
+        <div id="minesweeper">
+          <img class="games-section-img" src="" alt="">
+          <a href="/games/minesweeper.html" class="games-section-heading">Minesweeper</a>
+          <p class="games-section-desc">Uncover tiles and avoid the mines in this classic logic game.</p>
+        </div>
+        <div id="memory-match">
+          <img class="games-section-img" src="" alt="">
+          <a href="/games/memory-match.html" class="games-section-heading">Memory Match</a>
+          <p class="games-section-desc">Flip cards and match pairs to train your memory skills.</p>
+        </div>
+        <div id="number-guessing">
+          <img class="games-section-img" src="" alt="">
+          <a href="/games/number-guessing.html" class="games-section-heading">Number Guessing</a>
+          <p class="games-section-desc">Number Guessing.</p>
+        </div>
+        <div id="2048">
+          <img class="games-section-img" src="" alt="">
+          <a href="/games/2048.html" class="games-section-heading">2048</a>
+          <p class="games-section-desc">Slide tiles and combine numbers to reach the elusive 2048.</p>
+        </div>
+        <div id="snake">
+          <img class="games-section-img" src="" alt="">
+          <a href="/games/snake.html" class="games-section-heading">Snake</a>
+          <p class="games-section-desc">Guide the snake to eat and grow—don’t run into yourself!</p>
+        </div>
+        <div id="rock-paper-scissors">
+          <img class="games-section-img" src="" alt="">
+          <a href="/games/rock-paper-scissors.html" class="games-section-heading">Rock Paper Scissors</a>
+          <p class="games-section-desc">Test your luck and strategy! Choose rock, paper, or scissors and see if you can outsmart your opponent.</p>
+        </div>
+        <div id="typing-speed-test">
+          <img class="games-section-img" src="" alt="">
+          <a href="/games/typing-speed-test.html" class="games-section-heading">Typing Speed Test</a>
+          <p class="games-section-desc">How fast can you type? Challenge yourself and improve your typing speed and accuracy.</p>
+        </div>
+        <div id="whack-a-mole">
+          <img class="games-section-img" src="" alt="">
+          <a href="/games/whack-a-mole.html" class="games-section-heading">Whack-a-Mole</a>
+          <p class="games-section-desc">Quick reflexes win! Hit the moles as they pop up and rack up your score.</p>
         </div>
       </div>
     </section>
