--- a/games/snake.html
+++ b/games/snake.html
@@ -94,8 +94,8 @@
 </head>
 <body>
   <div class="navigation">
-    <a href="/ultimatrix/index.html">⬅ Back to Ultimatrix</a>
-    <a href="/more-games">Explore Other Games ➡</a>
+    <a href="/../index.html">⬅ Back to Ultimatrix</a>
+    <a href="/games/games.html">Explore Other Games ➡</a>
   </div>
 
   <div class="game-container">
