--- a/games/sudoku.html
+++ b/games/sudoku.html
@@ -91,8 +91,8 @@
 <body class="light">
   <div class="game-container">
     <div class="side-buttons">
-      <a href="/ultimatrix/index.html" class="btn btn-outline-light btn-sm">⬅ Back to Ultimatrix</a>
-      <a href="/more-games" class="btn btn-outline-light btn-sm">Explore Other Games ➡</a>
+      <a href="/../index.html" class="btn btn-outline-light btn-sm">⬅ Back to Ultimatrix</a>
+      <a href="/games/games.html" class="btn btn-outline-light btn-sm">Explore Other Games ➡</a>
     </div>
     <div class="game-box">
       <div class="title">16x16 Sudoku</div>
