--- a/games/xo.html
+++ b/games/xo.html
@@ -81,8 +81,8 @@
 <body>
   <div class="game-container">
     <div class="side-buttons">
-      <a href="/ultimatrix/index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
-      <a href="/more-games" class="btn btn-primary btn-sm">Explore Other Games ➡</a>
+      <a href="/../index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
+      <a href="/games/games.html" class="btn btn-primary btn-sm">Explore Other Games ➡</a>
     </div>
 
     <div class="game-box">
