--- a/tools/clock.html
+++ b/tools/clock.html
@@ -151,7 +151,7 @@
     </div>
   </div>
 
-  <button class="back-button" onclick="location.href='/ultimatrix/index.html'">⬅ Back to Ultimatrix</button>
+  <button class="back-button" onclick="location.href='/../index.html'">⬅ Back to Ultimatrix</button>
 
   <audio id="ambient" src="https://cdn.pixabay.com/audio/2023/01/16/audio_c00a78b3b4.mp3" loop></audio>
 
