--- a/tools/code-editor.html
+++ b/tools/code-editor.html
@@ -132,7 +132,7 @@
     </div>
 
     <div class="back-button">
-      <a href="/ultimatrix/index.html">⬅ Back to Ultimatrix</a>
+      <a href="/../index.html">⬅ Back to Ultimatrix</a>
     </div>
   </div>
 
