--- a/tools/date-duration.html
+++ b/tools/date-duration.html
@@ -118,9 +118,9 @@
 
       <div class="related">
         <strong>Related tools:</strong><br>
-        <a href="/tools/age-calculator/">🧮 Age Calculator</a>
-        <a href="/tools/date-adder/">📅 Add Days to Date</a>
-        <a href="/tools/countdown/">⏳ Countdown Timer</a>
+        <a href="/tools/age-calculator.html">🧮 Age Calculator</a>
+        <a href="/tools/date-adder.html">📅 Add Days to Date</a>
+        <a href="/tools/time-convertor/">⏳ Time Convertor</a>
       </div>
     </div>
   </div>
