--- a/tools/forlater-countdown.html
+++ b/tools/forlater-countdown.html
@@ -115,7 +115,7 @@
 <body>
 
   <div class="side-buttons">
-    <a href="/ultimatrix/index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
+    <a href="/../index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
     <a href="/more-tools" class="btn btn-primary btn-sm">Explore More ➡</a>
   </div>
 
