--- a/tools/age-calculator.html
+++ b/tools/age-calculator.html
@@ -84,8 +84,8 @@
 <body>
   <div class="tool-container">
     <div class="side-buttons">
-      <a href="/tools" class="btn btn-outline-dark btn-sm">⬅ Back to Tools</a>
-      <a href="/more-tools" class="btn btn-primary btn-sm">Explore More ➡</a>
+      <a href="/../index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
+      <a href="/tools/tools.html" class="btn btn-primary btn-sm">Explore Other Tools ➡</a>
     </div>
 
     <div class="tool-box">
