--- a/tools/date-adder.html
+++ b/tools/date-adder.html
@@ -116,8 +116,8 @@
 <body>
 
   <div class="side-buttons">
-    <a href="/ultimatrix/index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
-    <a href="/more-tools" class="btn btn-primary btn-sm">Explore More ➡</a>
+    <a href="/../index.html" class="btn btn-outline-dark btn-sm">⬅ Back to Ultimatrix</a>
+    <a href="/tools/tools.html" class="btn btn-primary btn-sm">Explore More ➡</a>
   </div>
 
   <div class="tool-container">
