--- a/tools/notepad.html
+++ b/tools/notepad.html
@@ -174,7 +174,7 @@
   </div>
 
   <div class="back-button">
-    <a href="/ultimatrix/index.html">⬅ Back to Ultimatrix</a>
+    <a href="/../index.html">⬅ Back to Ultimatrix</a>
   </div>
 
   <script>
