--- a/tools/tools.html
+++ b/tools/tools.html
@@ -38,6 +38,40 @@
       <h3>Tools</h3>
       <p>Find Useful daily use tools to make life Easy .</p>
       <blockquote>“The best way to predict the future is to invent it.” – Alan Kay</blockquote>
+      <h1>
+        <a href="/tools/age-calculator.html" style="color:blue;">Age Calculator</a>
+        <span style="font-size:small; color:gray;"> - Calculate your age from your birthdate.</span>
+        <br>
+        <a href="/tools/case-convertor.html" style="color:blue;">Case Convertor</a>
+        <span style="font-size:small; color:gray;"> - Change text between uppercase, lowercase, and more.</span>
+        <br>
+        <a href="/tools/clock.html" style="color:blue;">Clock</a>
+        <span style="font-size:small; color:gray;"> - View the current time in your timezone.</span>
+        <br>
+        <a href="/tools/code-editor.html" style="color:blue;">Code Editor</a>
+        <span style="font-size:small; color:gray;"> - Write and edit code directly in your browser.</span>
+        <br>
+        <a href="/tools/date-adder.html" style="color:blue;">Date Adder</a>
+        <span style="font-size:small; color:gray;"> - Add days, months, or years to any date.</span>
+        <br>
+        <a href="/tools/date-duration.html" style="color:blue;">Date Duration</a>
+        <span style="font-size:small; color:gray;"> - Calculate the duration between two dates.</span>
+        <br>
+        <a href="/tools/forlater-countdown.html" style="color:blue;">ForLater Countdown</a>
+        <span style="font-size:small; color:gray;"> - Set a countdown for important events.</span>
+        <br>
+        <a href="/tools/notepad.html" style="color:blue;">Notepad</a>
+        <span style="font-size:small; color:gray;"> - Take quick notes and save them online.</span>
+        <br>
+        <a href="/tools/pdf-splitter.html" style="color:blue;">PDF Splitter</a>
+        <span style="font-size:small; color:gray;"> - Split PDF files into separate pages.</span>
+        <br>
+        
+        
+        <a href="/tools/word-counter.html" style="color:blue;">Word Counter</a>
+        <span style="font-size:small; color:gray;"> - Count words, characters, and paragraphs in your text.</span>
+        <br>
+      </h1>
     </section>
   </main>
   <footer>
