17Jul25|Blogs page|Designed how to page

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -324,7 +324,7 @@
                     <h4 class="travel-title">Easy Git Setup</h4>
                     <p class="travel-desc">Getting started with Git is simpler than you think—just a few steps and you're version-controlling like a pro. Whether you're syncing code, tracking changes, or collaborating across projects, this streamlined setup gets you from zero to commit in no time.</p>
                     <div class="blogs-btn-wrapper">
-                      <a href="\blogs\howto\software\how-to-use-git.html" class="btn">Read More</a>
+                      <a href="\blogs\howto\coding\how-to-use-git.html" class="btn">Read More</a>
                     </div>
                   </div>
                 </div>
@@ -359,8 +359,8 @@
             <p class="blogs-amazon-subheading">Explore Categories</p>
             <div class="category-cards">
               <div class="category-card category-gradient eco">
-                <a href="\blogs\howto\software\software.html" class="category-link">
-                  <span>Software</span>
+                <a href="\blogs\howto\coding\coding.html" class="category-link">
+                  <span>Coding</span>
                 </a>
               </div>
               <div class="category-card category-gradient gadgets">
