--- a/blogs/travel/travel.html
+++ b/blogs/travel/travel.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mystery of Clouds in Lonavala | Travel Blog</title>
+  <title>Travelling | Blogs</title>
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/blogs.css" />
   <script src="/js/script.js" defer></script>
 </head>
-
 <body>
   <header>
     <div class="header-container">
@@ -26,12 +24,76 @@
     </div>
   </header>
   <main>
-    <section>
-      <h2>Travelling</h2>
+    <section class="blogs-main-category">
+      <h3>Travelling</h3>
       <p>Mist wraps the hills like a secret, and the clouds drift low, whispering tales only silence understands. Each breath of fog feels like a hidden chapter unfolding across the ridges.</p>
-      <p>(Full story coming soon!)</p>
+      <nav class="blogs-main-category-menu">
+        <ul>
+          <li><a href="#" class="howto-tab-btn active" data-tab="lonavala">Lonavala</a></li>
+          <li><a href="#" class="howto-tab-btn" data-tab="goa">Goa</a></li>
+          <li><a href="#" class="howto-tab-btn" data-tab="fireflies">Fireflies</a></li>
+        </ul>
+      </nav>
     </section>
+    <section>
+      <div id="howto-tabs">
+        <div id="tab-lonavala" class="howto-tab-content" style="display:block;">
+          <p class="blogs-amazon-subheading">Lonavala: Mystery of Clouds</p>
+          <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+            <div class="howto-card color1">
+              <a href="/blogs/travel/lonavala.html">
+                <h4>Mystery of Clouds in Lonavala</h4>
+                <p>Mist wraps the hills like a secret, and the clouds drift low, whispering tales only silence understands.</p>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div id="tab-goa" class="howto-tab-content" style="display:none;">
+          <p class="howto-tab-title blogs-amazon-subheading">Goa: The Peaceful Shores</p>
+          <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+            <div class="howto-card color2">
+              <a href="/blogs/travel/goa.html">
+                <h4>The Peaceful Shores of Goa</h4>
+                <p>Where waves murmur secrets into the sand and sunsets paint stories across the sea.</p>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div id="tab-fireflies" class="howto-tab-content" style="display:none;">
+          <p class="howto-tab-title blogs-amazon-subheading">Fireflies: Dancing with Light</p>
+          <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+            <div class="howto-card color3">
+              <a href="/blogs/travel/fireflies.html">
+                <h4>Dancing with Fireflies</h4>
+                <p>Beneath the hush of nightfall, tiny lanterns flicker to life, guiding wanderers through stories nature whispers.</p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <p class="blogs-amazon-subheading">Want to see more blogs?</p>
+<div class="blogs-btn-wrapper">
+  <a class="btn" href="/blogs/blogs.html">← Go to Blogs</a>
+</div>
+    <!-- <button onclick="window.location.href='/blogs/blogs.html'" class="btn">← Go Back</button> -->
+</section>
   </main>
+</main>
 </body>
-
+<script>
+// Tab switching logic for Travel section
+document.querySelectorAll('.howto-tab-btn').forEach(function(btn) {
+  btn.addEventListener('click', function(e) {
+    e.preventDefault();
+    document.querySelectorAll('.howto-tab-btn').forEach(function(b) { b.classList.remove('active'); });
+    btn.classList.add('active');
+    var tab = btn.getAttribute('data-tab');
+    document.querySelectorAll('.howto-tab-content').forEach(function(tc) {
+      tc.style.display = 'none';
+    });
+    document.getElementById('tab-' + tab).style.display = 'block';
+  });
+});
+</script>
 </html>
+
